# g-tool

./: .env.production.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  PLAN.md  PROGRESS.md  README.md  docker-compose.yml
.claude/agents/: backend-dev.md  frontend-dev.md  planner.md  researcher.md  reviewer.md
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  google_errors.py  router.py  service.py
backend/app/bookmark/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/calendar/: router.py  schemas.py  service.py
backend/app/core/: background_sync.py  database.py  dependencies.py  error_reporter.py  exceptions.py  migrate_encrypt.py  security.py
backend/app/mail/: models.py
backend/app/mail/routers/: classify.py  gmail.py  inbox.py  naver.py
backend/app/mail/services/: classifier.py  feedback.py  gmail.py  helpers.py  naver.py
backend/app/todo/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_dependencies.py
backend/tests/routers/: test_auth.py  test_calendar.py  test_classify.py  test_gmail.py  test_inbox.py  test_naver.py
backend/tests/services/: test_background_sync.py
bot/: .env.example  pyproject.toml
bot/app/: config.py  pipeline.py
bot/tests/: conftest.py  test_ai_service.py  test_discord_service.py  test_github_service.py  test_issue_builder.py  test_main.py  (+2 more)
frontend/: package.json  pnpm-lock.yaml
references/: guide-google-oauth-setup.md  guide-oracle-cloud-free-deploy.md
(+67 files in other folders)
